# curso-python-indec

./: README.md  clase1.html  clase1.ipynb  ejercicios-clase1.docx  pyproject.toml
clase1/: clase1.ipynb
clase2/Respuesta Tarea 2/: salarios_grafico.html  tarea2_rta.ipynb
clase2/Respuesta Tarea 2/data/: salarios.xlsx
clase2/Respuesta Tarea 2/temas a ver/: tarea2_a.ipynb  tarea2_b.ipynb  tarea2_c.ipynb
clase2/Tarea/: tarea2.ipynb
clase2/notas clase 1/: apuntes_clase_2.ipynb  grafico muy importante.html
clase2/notas clase 1/data/: indice de produccion industrial minero.xlsx
clase3/: .~lock.ejercicios.docx#  clase3.html  clase3.ipynb  ejercicios.docx  ejercicios.md  ejercicios.odt
clase4/Actividad clase 4/: actividad_clase_4.ipynb
clase4/Notas de clase 4/: notas_de_clase_4.ipynb
clase4/Notas de clase 4/data/: expo_desestacionalizada_1996_2023.xls  expo_tendencia_ciclo_1996_2023.xlsx
clase4/Respuesta Actividad clase 4/: actividad_clase_4_rta.ipynb
clase4/Respuesta Actividad clase 4/temas a ver/: actividad_clase_4_a.ipynb  actividad_clase_4_b.ipynb
clase5/: Ejercicios clase 5.odt  clase5.html  clase5.ipynb  complexp_variacion_2019_2022.xls  hello.xlsx  pandas.xlsx
ejecutable/: instalacion_entorno.py
intro/: INDEC Curso Introducción a Python 2023 orientado al análisis de datos.docx  Primeros pasos en Python.docx
trabajo_final/Respuesta Trabajo Final/: tp_final_rta.ipynb
trabajo_final/Respuesta Trabajo Final/data/crudo/: 070301_2021.xlsx  sh_oferta_demanda_09_23.xls
trabajo_final/consignas_tp_final/: consignas_trabajo_final.docx
